--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
-        <h1></h1>
+        <h1>Name</h1>
     </body>
 </html>
